--- a/.ebextensions/logging.config
+++ b/.ebextensions/logging.config
@@ -3,6 +3,10 @@ files:
     content: |
       /tmp/sample-app*
 
+  "/tmp/test.txt":
+    content: |
+      /tmp/sample-app*
+
   "/opt/elasticbeanstalk/tasks/taillogs.d/01-sample-app.conf":
     content: |
       /tmp/sample-app.log
